WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90943
[Qt] REGRESSION(
r122250
): It broke USE(3D_GRAPHICS)=1 and ENABLE(WEBGL)=0 builds
https://bugs.webkit.org/show_bug.cgi?id=90943
Summary
[Qt] REGRESSION(r122250): It broke USE(3D_GRAPHICS)=1 and ENABLE(WEBGL)=0 builds
Csaba Osztrogonác
Reported
2012-07-10 23:23:56 PDT
/usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function WebCore::Extensions3DOpenGL::~Extensions3DOpenGL():Extensions3DOpenGL.cpp(.text._ZN7WebCore18Extensions3DOpenGLD1Ev+0x24): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::~Extensions3DOpenGLCommon()' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function WebCore::Extensions3DOpenGL::~Extensions3DOpenGL():Extensions3DOpenGL.cpp(.text._ZN7WebCore18Extensions3DOpenGLD2Ev+0x24): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::~Extensions3DOpenGLCommon()' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function WebCore::Extensions3DOpenGL::~Extensions3DOpenGL():Extensions3DOpenGL.cpp(.text._ZN7WebCore18Extensions3DOpenGLD0Ev+0x25): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::~Extensions3DOpenGLCommon()' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function WebCore::Extensions3DOpenGL::Extensions3DOpenGL(WebCore::GraphicsContext3D*):Extensions3DOpenGL.cpp(.text._ZN7WebCore18Extensions3DOpenGLC1EPNS_17GraphicsContext3DE+0x21): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::Extensions3DOpenGLCommon(WebCore::GraphicsContext3D*)' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function WebCore::Extensions3DOpenGL::Extensions3DOpenGL(WebCore::GraphicsContext3D*):Extensions3DOpenGL.cpp(.text._ZN7WebCore18Extensions3DOpenGLC2EPNS_17GraphicsContext3DE+0x21): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::Extensions3DOpenGLCommon(WebCore::GraphicsContext3D*)' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function vtable for WebCore::Extensions3DOpenGL:Extensions3DOpenGL.cpp(.data.rel.ro._ZTVN7WebCore18Extensions3DOpenGLE+0x10): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::supports(WTF::String const&)' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function vtable for WebCore::Extensions3DOpenGL:Extensions3DOpenGL.cpp(.data.rel.ro._ZTVN7WebCore18Extensions3DOpenGLE+0x14): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::ensureEnabled(WTF::String const&)' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function vtable for WebCore::Extensions3DOpenGL:Extensions3DOpenGL.cpp(.data.rel.ro._ZTVN7WebCore18Extensions3DOpenGLE+0x18): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::isEnabled(WTF::String const&)' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function vtable for WebCore::Extensions3DOpenGL:Extensions3DOpenGL.cpp(.data.rel.ro._ZTVN7WebCore18Extensions3DOpenGLE+0x1c): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::getGraphicsResetStatusARB()' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function vtable for WebCore::Extensions3DOpenGL:Extensions3DOpenGL.cpp(.data.rel.ro._ZTVN7WebCore18Extensions3DOpenGLE+0x38): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::getTranslatedShaderSourceANGLE(unsigned int)' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function vtable for WebCore::Extensions3DOpenGL:Extensions3DOpenGL.cpp(.data.rel.ro._ZTVN7WebCore18Extensions3DOpenGLE+0x48): error: undefined reference to 'WebCore::Extensions3DOpenGLCommon::initializeAvailableExtensions()' /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(Extensions3DOpenGL.o): in function typeinfo for WebCore::Extensions3DOpenGL:Extensions3DOpenGL.cpp(.data.rel.ro._ZTIN7WebCore18Extensions3DOpenGLE+0x8): error: undefined reference to 'typeinfo for WebCore::Extensions3DOpenGLCommon'
Attachments
Patch
(2.35 KB, patch)
2012-07-11 07:22 PDT
,
Joshua Netterfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-07-10 23:28:06 PDT
I think the root of the problem is that USE(3D_GRAPHICS)=1 and ENABLE(WEBGL)=0 for the --minimal build. But Extensions3DOpenGLCommon.cpp is ENABLE(WEBGL)guarded and Extensions3DOpenGL.cpp is USE(3D_GRAPHICS) guarded.
Joshua Netterfield
Comment 2
2012-07-11 07:22:41 PDT
Created
attachment 151703
[details]
Patch
Csaba Osztrogonác
Comment 3
2012-07-11 08:06:40 PDT
Comment on
attachment 151703
[details]
Patch LGTM, r=me.
Csaba Osztrogonác
Comment 4
2012-07-11 08:08:21 PDT
Comment on
attachment 151703
[details]
Patch Clearing flags on attachment: 151703 Committed
r122334
: <
http://trac.webkit.org/changeset/122334
>
Csaba Osztrogonác
Comment 5
2012-07-11 08:08:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug