[Qt] REGRESSION(r122250): It broke USE(3D_GRAPHICS)=1 and ENABLE(WEBGL)=0 builds https://bugs.webkit.org/show_bug.cgi?id=90943

Patch by Joshua Netterfield <jnetterfield@rim.com> on 2012-07-11
Reviewed by Csaba Osztrogonác.

Uses proper guarding in Extensions3DOpenGLCommon and Extensions3DOpenGLES as per https://bugs.webkit.org/show_bug.cgi?id=90506.

No new tests, becasue there is no new functionality.

* platform/graphics/opengl/Extensions3DOpenGLCommon.cpp: Use proper guarding.
* platform/graphics/opengl/Extensions3DOpenGLES.cpp: Use proper guarding.

Canonical link: https://commits.webkit.org/108810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122334 268f45cc-cd09-0410-ab3c-d52691b4dbfc